2002-03-19  Damon J. Courtney <damon@unreality.com>

	* rivet/init.tcl
	    Appended packages-local to the auto_path.  This will be a great
	    place for people to place local packages that we won't mess with.

2002-03-16  David N. Welton  <davidw@dedasys.com>

	* tests/runtests.tcl: Updated to run with apachetest, eliminating
	makeconf.tcl, and moving template.conf.tcl to the apachetest
	directory.

	* tests/apachetest/apachetest.tcl: New file, grouping together
	the test functions in one place, and in a namespace.

2002-03-15  David N. Welton  <davidw@dedasys.com>

	* tests/config.test: Added some new, automatically generated
	tests.

	* src/mod_rivet.c (Rivet_MergeDirConfigVars): Make sure that both
	arguments to overlay_tables exist!

	* src/mod_rivet.h: Add a default error script.

	* src/TclWebapache.c (TclWeb_GetEnvVars): DecrRef for the name of
	the environment variable.

	* rivet/rivet-tcl/cookie.tcl (make_cookie_attributes): Add an
	interface to add the 'expire' field directly.
	(cookie): "Set-Cookie" is uppercase for both words.

2002-03-15  Damon J. Courtney <damon@unreality.com>

	* src/apache_cookie.c
	* src/apache_cookie.h
	    Removed in favor of doing cookies through a Tcl interface.

	* src/channel.c
	* src/channel.h
	    Renamed to rivetChannel.c and rivetChannel.h

	* src/rivetCore.c
	* src/TclWebapache.c
	    Removed references to Apache cookie functions.

2002-03-14  Damon J. Courtney <damon@unreality.com>

	* src/TclWebapache.c
	    Added a routine to setup the environment variables and mark
	    that they have been set.  This will save us from having to
	    reload them all the time.  Once they're loaded, they don't
	    load again.

	* rivet/rivet-tcl/cookie.tcl
	    Added a new 'cookie' command for setting and getting cookies.

	* rivet/rivet-tcl/import_keyvalue_pairs.tcl
	    Added a command to import keyvalue pairs from arguments.

	* rivet/rivet-tcl/load_cookies.tcl
	    Made load_cookies use the env command to get the one variable