@@ -1,3 +1,10 @@
+2002-03-21  Damon J. Courtney <damon@unreality.com>
+
+	* src/TclWebapache.c
+	    If the header being set is Set-Cookie, we add it to the table
+	    instead of overwriting it.  This allows us to set more than
+	    one cookie per page, which is legal to all browsers.
+
 2002-03-19  Damon J. Courtney <damon@unreality.com>
 
 	* rivet/init.tcl
